# needlework

./: .gitignore  README.md  pants.toml  pyproject.toml
libraries/toy/src/toy/: utils.py
libraries/toy/tests/toy/: test_utils.py
services/shop/src/shop/: inventory.py  models.py
services/shop/tests/shop/: test_inventory.py
